@@ -184,8 +184,6 @@
 ./ags/X/editor/ags_sheet_edit_callbacks.c
 ./ags/X/editor/ags_sheet_toolbar.c
 ./ags/X/editor/ags_sheet_toolbar_callbacks.c
-./ags/X/editor/ags_toolbar.c
-./ags/X/editor/ags_toolbar_callbacks.c
 ./ags/X/editor/ags_vautomation_edit_box.c
 ./ags/X/editor/ags_vwave_edit_box.c
 ./ags/X/editor/ags_wave_edit.c
