@@ -1,3 +1,8 @@
+ags (3.7.19)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing listing of developer manual
+
 ags (3.7.18)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
